--- a/plugins/EmptyTheme/config.yaml
+++ b/plugins/EmptyTheme/config.yaml
@@ -17,7 +17,7 @@ themes:
         class: website
         l10n_lexicon:
             ja:
-                'Website theme has no templates.': 'テンプレートを持たない空白のウェブサイトテーマです。'
+                Website theme has no templates.: 'テンプレートを持たない空白のウェブサイトテーマです。'
 
     empty_blog:
         id: empty_blog
@@ -29,11 +29,12 @@ themes:
         class: blog
         l10n_lexicon:
             ja:
-                'Blog theme has no templates.': 'テンプレートを持たない空白のブログテーマです。'
+                Blog theme has no templates.: 'テンプレートを持たない空白のブログテーマです。'
 
 l10n_lexicon:
     ja:
-        'Empty Theme': '空白のテーマ'
-        'Provides empty themes has no templates and elements.': 'テンプレートなどの要素を持たない空白のテーマを提供します。'
-        'Empty Website': '空白のウェブサイト'
-        'Empty Blog': '空白のブログ'
+        Empty Theme: '空白のテーマ'
+        Provides empty themes has no templates and elements.: 'テンプレートなどの要素を持たない空白のテーマを提供します。'
+        Empty Website: '空白のウェブサイト'
+        Empty Blog: '空白のブログ'
+
